almost finished multiple target tracking